Caching added (caches main page and champions db)
Added changes in dockerfile and docker-compose, caching implemented in
views.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,11 @@ services:
             - inner_net
             - gateway
 
+    memcached:
+        image: memcached
+        networks: 
+            - inner_net
+        
     nginx:
         image: nginx
         networks:
